# nova-devops-copilot

./: .gitignore  LICENSE  README.md  SUBMISSION.md  nixpacks.toml  pyproject.toml  railway.toml  render.yaml  requirements.txt
backend/: .env.example  Dockerfile  main.py  nixpacks.toml  pyproject.toml  railway.toml  render.yaml  requirements.txt  start.sh
backend/.vercel/: project.json
backend/agents/: __init__.py  act.py  escalate.py  monitor.py  reason.py
backend/api/: index.py
backend/app/: __init__.py  agents.py  config.py  main.py  nova_client.py
backend/src/: __init__.py  __main__.py  api.py  config.py  main.py  mock_data.py  pipeline.py  sandbox_data.py
backend/src/agents/: act_agent.py  escalate_agent.py  monitor_agent.py  reason_agent.py
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/pipeline/: route.ts
frontend/src/app/api/pipeline/stream/: route.ts
frontend/src/components/: AgentCard.tsx  AgentPipeline.tsx  DashboardStats.tsx  EscalationQueue.tsx  EventCard.tsx  ExamplePrompts.tsx  Header.tsx  IncidentCard.tsx  MarkdownRenderer.tsx  ModeTag.tsx  PipelineFlow.tsx  PipelineHeader.tsx  PipelineRunButton.tsx  SeverityBadge.tsx  StatCard.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/types/: index.ts
